feat(facility): add facilities maintenance v2
